fixed overflow on iphone

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,11 +19,13 @@
 .center_body {
   width: 80%;
   margin: auto;
+ overflow: hidden;
 }
 @media screen and (max-width: 768px) {
   .center_body {
   width: 100%;
-  margin: auto;
+ margin: auto;
+ overflow: hidden;
   }
 }*/
 
